# AdobeMaybeLight

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
catalog/: schema.sql
crates/ai-smoke/: Cargo.toml
crates/ai-smoke/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: gui.rs  main.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/catalog/tests/: library.rs
crates/gpu/: Cargo.toml
crates/gpu/examples/: modtest.rs
crates/gpu/shaders/: develop.wgsl
crates/gpu/src/: lib.rs
crates/raw-decode/: Cargo.toml  build.rs
crates/raw-decode/csrc/: shim.c
crates/raw-decode/examples/: errpath.rs
crates/raw-decode/src/: lib.rs
crates/recipe/: Cargo.toml
crates/recipe/src/: lib.rs
docs/: develop-pipeline.md  model-packaging.md  recipe-format.md  stack-decisions.md
packaging/: Info.plist  bundle.sh
