[package]
name = "ai-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ai-smoke"
path = "src/main.rs"

[dependencies]
# Dynamic-load against the system libonnxruntime (set ORT_DYLIB_PATH).
# CoreML EP for Apple-Silicon acceleration; falls back to CPU automatically.
ort = { version = "=2.0.0-rc.10", default-features = false, features = [
    "load-dynamic",
    "ndarray",
    "coreml",
] }
ndarray = "0.16"
