[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aml"
path = "src/main.rs"

[dependencies]
gpu = { path = "../gpu" }
raw-decode = { path = "../raw-decode" }
recipe = { path = "../recipe" }
catalog = { path = "../catalog" }
wgpu = "22"
winit = "0.30"
pollster = "0.3"
rfd = "0.14"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
image = { version = "0.25", default-features = false }
