[package]
name = "catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
serde_json = "1"
raw-decode = { path = "../raw-decode" }
recipe = { path = "../recipe" }
thiserror = "1"

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
